--- a/starter_files/index.html
+++ b/starter_files/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title> </title>
+    
+    <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css"/>
+<script defer src="https://pyscript.net/alpha/pyscript.js"></script>
+  <title> Playground </title>
     <!-- Import PyScript -->
 
     <!-- Import Python modules -->
