--- a/starter_files/index.html
+++ b/starter_files/index.html
@@ -11,7 +11,7 @@
 
 
 </head>
-<body>
+<body><py-script> print("Hello world!") </py-script> 
     <!-- All your other HTML -->
 
     <!-- Python Script Here -->
