--- a/starter_files/index.html
+++ b/starter_files/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <py-env>
+        - numpy
+        - pandas
+        - scikit learn
+    </py-env>
+
     
     <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css"/>
 <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
@@ -11,7 +17,10 @@
 
 
 </head>
-<body><py-script> print("Hello world!") </py-script> 
+<body><py-script>
+    import numpy as np
+a = [1,3,5]
+print(np.power(a,3)) print("Hello world!") </py-script> 
     <!-- All your other HTML -->
 
     <!-- Python Script Here -->
